applications/ingress-external-hosts/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: pve-external
spec:
  type: ExternalName
  externalName: pve.home.jlh.name
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxmox
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
      - pve.jlh.name
    secretName: jlh-name-tls
  rules:
  - host: pve.jlh.name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pve-external
            port:
              number: 8006
